# sicpgen

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/templates/: readme.md.tpl
