[package]
name = "sicpgen"
version = "0.1.0"
authors = ["Nikita Antonenkov <krigar1184@gmail.com>"]
edition = "2018"
description = "A simple CLI tool for generating exercise templates for SICP"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
failure = "0.1.7"
itertools = "0.9.0"
exitfailure = "0.5.1"
tera = "1"

[dev-dependencies]
tempfile = "3.1"
